--- a/subethaedit/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.3
+    
+    *) SYNTAX: Added some missing Classes and Constants. HYR-587.
+
 Changes with Version 1.2
     
     *) SYNTAX: Fixed preprocessor end regex. HYR-410.
