--- a/subethaedit/ReleaseNotes.txt
+++ b/subethaedit/ReleaseNotes.txt
@@ -1,42 +1,88 @@
 
+SubEthaEdit 2.2
+===============
+
+Additions/New Features:
+- Universal Binary - SubEthaEdit now runs on Intel Macs natively.
+- Dragging text on app icon creates new document with dragged text.
+- Extensions of untitled documents are guessed by using their mode.
+- "Find All" results can now be used to navigate in the document.
+- Selected lines can now be copied from a "Find All" window.
+
+Changes:
+- Added more classes and constants to Objective-C.mode.
+- Improved PHP function recognition and added all PHP5 keywords.
+- Added autocompletion of Core-API, Std-Lib and rubyonrails classes and methods 
+  to the Ruby mode
+- Invitation windows are placed more prominently.
+
+Fixes:
+- Fixed a selection display/redraw bug that happened when collaborating on 
+  Tiger.
+- Fixed an issue where joined documents didn't get the input focus after the 
+  transfer has been completed.
+- Improved keyboard navigation in "Find All".
+- Fixed a bug in the syntax highlighter, where colors where not updated 
+  correctly while typing, but did appear correctly after reloading the file.
+- Fixed an issue where the context menu and action popup in the participants 
+  drawer weren't validated correctly.
+- Windows for new documents are no longer created under the dock.
+- Fixed a bug where files created with "File->New->Mode" weren't resized 
+  correctly, fixed the same issue when opening new files via see tool.
+- Fixed a bug where the see tool didn't set the correct modes when given 
+  multiple files.
+- Fixed the "Wrap/Wrap lines" functionality to retain its setting.
+- Fixed maximize button of document windows to behave according to HIG.
+- Fixed word boundaries for autocomplete and selection to include colon (which 
+  they didn't on Tiger).
+- Fixed an issue where a document wasn't joined automatically though it was 
+  addressed in a see:// URL.
+- Fixed mode guessing upon first save to work if initial save is canceled.
+- XHTML export and "Copy as XHTML" now export quotes as entities.
+- see tool now conforms to the mode's encoding preference.
+- see tool --mode parameter mode matching is case insensitive.
+- Improved speed of "Show Invisibles" significantly.
+- Fixed a bug in Perl.mode concerning POD comments.
+- Fixed an issue where the context menu and action popup in the browser windows 
+  weren't validated correctly.
+
 SubEthaEdit 2.1.2
 =================
 
-Additions:
+Additions/New Features:
 - Added Conference Kit.
-- Added alternate menu item for 'Switch Mode' called 'Show In Finder', which
+- Added alternate menu item for 'Switch Mode' called 'Show In Finder', which 
   reveals the choosen mode in the Finder.
 - Added change logs to the mode bundles.
 - Added submenu to 'New', new files now can be created in a specific mode.
 
 Fixes:
-- Fixed several issues where bad Address Book entries caused crashes or
+- Fixed several issues where bad Address Book entries caused crashes or 
   exceptions at startup.
 - Improved overall protocol stability.
-- Fixed an issue where empty mode bundles caused an exception at startup,
+- Fixed an issue where empty mode bundles caused an exception at startup, 
   rendering SubEthaEdit unusable.
-- Fixed a bug in 'Save a Copy As...' where the selected encoding was not used
+- Fixed a bug in 'Save a Copy As...' where the selected encoding was not used 
   to save the copy.
-- Fixed a bug where externally changed documents weren't set modified after
+- Fixed a bug where externally changed documents weren't set modified after 
   choosing to keep the SubEthaEdit version.
-- Fixed an issue where the mode of documents created using see's pipe-in was
+- Fixed an issue where the mode of documents created using see's pipe-in was 
   not guessed on save.
-- Fixed a bug where the mode of documents created using the see tool was guessed
-  again on save.
-- Fixed a bug where documents which can be opened via the Help menu were opened
+- Fixed a bug where the mode of documents created using the see tool was 
+  guessed again on save.
+- Fixed a bug where documents which can be opened via the Help menu were opened 
   more than once.
 - Fixed a bug where the scope of a 'Find All' operation wasn't respected.
-- Fixed a bug where the matching brackets were only highlighted when moving the
+- Fixed a bug where the matching brackets were only highlighted when moving the 
   cursor using the arrow keys.
-- Fixed a bug where the 'Shift Left' command produced a crash when the editor
+- Fixed a bug where the 'Shift Left' command produced a crash when the editor 
   used tabs and activated indenting new lines.
-- Fixed a bug where HTML Export didn't export style and weight if current font
+- Fixed a bug where HTML Export didn't export style and weight if current font 
   was synthesized.
-- Fixed an issue where the activiation of syntax highlighting in the print
+- Fixed an issue where the activiation of syntax highlighting in the print 
   options also activated it in the editor.
-- Fixed various issues which occurred while using autocompletion in Blockedit
+- Fixed various issues which occurred while using autocompletion in Blockedit 
   mode.
-
 
 SubEthaEdit 2.1.1
 =================
@@ -51,7 +97,6 @@ Fixes:
   as an administrator in SubEthaEdit.
 - Printing panel now displays localized separators for margins.
 - Python mode now recognizes abbreviated class declarations.
-
 
 SubEthaEdit 2.1
 ===============
