--- a/subethaedit/Modes/PHP-HTML.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/PHP-HTML.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.3 (SEE 2.3)
+    *) added css and xhtml autocompletions
+    *) added coloration of single line html comments <!-- -->
+
 Changes with Version 1.2
     *) added private, public and protected to RegexSymbols as well as SyntaxDefinition.html
     *) fixed double appeareance of functions if indented 3 spaces
