--- a/subethaedit/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
@@ -1,6 +1,7 @@
 Changes with Version 2.4 (by dom)
     *) added more AutocompleteAdditions (standard XHTML, CSS)
     *) added comment mark recognition <!-- mark
+    *) added coloring of oneline <!-- comments
     *) added recognition of named divs
     *) removed the "def" in the function popup (so you can directly jump to functions via the keyboard)
 
