--- a/subethaedit/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
@@ -4,6 +4,7 @@ Changes with Version 2.4 (by dom - SEE 2.3)
     *) added coloring of oneline <!-- comments -->
     *) added recognition of named divs
     *) removed the "def" in the function popup (so you can directly jump to functions via the keyboard)
+    *) added #mark to symbol recognition (like #pragma mark in C/Objective-C
 
 Changes with Version 2.3 (by dom)
 
