--- a/subethaedit/Modes/C++.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/C++.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,9 @@
+Changes with Version 1.3
+
+    *) EXTENSIONS: Added hxx and hpp variants.
+    *) SYMBOLS: Fixed SEE-490.
+    *) AUTOCOMPLETE: Added important Carbon keywords
+
 Changes with Version 1.2
     
     *) SYNTAX: Fixed preprocessor end regex. HYR-410.
