--- a/subethaedit/Modes/Lua.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Lua.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.2 (SEE 2.3)
+
+    *) added function recognition for anonymous functions
+
 Changes with Version 1.1
     
     *) EXTENSIONS: Added uppercase variants where appropriate.
