--- a/subethaedit/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,8 @@
+Changes with Version 1.4 (SEE 2.3)
+
+    *) SYMBOLS: Fixed SEE-490.
+    *) AUTOCOMPLETE: Added important Carbon keywords
+
 Changes with Version 1.3
     
     *) SYNTAX: Added some missing Classes and Constants. HYR-587.
