--- a/subethaedit/Modes/Pascal.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Pascal.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.2 (SEE 2.3)
+
+    *) SYMBOLS: Fixed SEE-490.
+
 Changes with Version 1.1
     
     *) EXTENSIONS: Added uppercase variants where appropriate.
