--- a/subethaedit/Modes/C++.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/C++.mode/Contents/Resources/ChangeLog.txt
@@ -1,4 +1,4 @@
-Changes with Version 1.3
+Changes with Version 1.3 (SEE 2.3)
 
     *) EXTENSIONS: Added hxx and hpp variants.
     *) SYMBOLS: Fixed SEE-490.
