--- a/subethaedit/Modes/C.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/C.mode/Contents/Resources/ChangeLog.txt
@@ -1,4 +1,4 @@
-Changes with Version 1.3
+Changes with Version 1.3 (SEE 2.3)
 
     *) SYMBOLS: Fixed SEE-490.
     *) AUTOCOMPLETE: Added important Carbon keywords
