--- a/subethaedit/Modes/PHP-HTML.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/PHP-HTML.mode/Contents/Resources/ChangeLog.txt
@@ -1,6 +1,7 @@
 Changes with Version 1.4 (SEE 2.4)
     *) added real, double, bool, boolean, integer, resource, NULL as keywords
     *) removed non existing functions: add, remove
+    *) added missing keywords: endif, endwhile
 
 Changes with Version 1.3 (SEE 2.3)
     *) added css and xhtml autocompletions
