--- a/subethaedit/Modes/XML.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/XML.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.2 (SEE 2.4)
+
+    *) EXTENSIONS: Added sdef
+
 Changes with Version 1.1
     
     *) EXTENSIONS: Added uppercase variants where appropriate.
