--- a/subethaedit/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,8 @@
+Changes with Version 1.5 (SEE 2.5)
+
+    *) Added Scripts: NSLog with Function Call, Insert Call To Super, Open Counterpart, Open File In Project, Open Xcode Project, Compile Using Xcode, Un/Comment Selected Lines, Lookup in AppKiDo.
+    *) AUTOCOMPLETE: added missing constants (AddressBook, NSError)
+
 Changes with Version 1.4 (SEE 2.3)
 
     *) SYMBOLS: Fixed SEE-490.
