--- a/subethaedit/Modes/C++.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/C++.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes with Version 1.4 (SEE 2.5)
+    *) Added scripts (Open Counterpart, Check Syntax)
+
 Changes with Version 1.3 (SEE 2.3)
 
     *) EXTENSIONS: Added hxx and hpp variants.
