--- a/subethaedit/Modes/C.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/C.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.4 (SEE 2.4)
+
+    *) Added scripts (Open Counterpart, Check Syntax)
+
 Changes with Version 1.3 (SEE 2.3)
 
     *) SYMBOLS: Fixed SEE-490.
