--- a/subethaedit/Modes/CSS.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/CSS.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,8 @@
+Changes with Version 1.3 (SEE 2.5)
+
+    *) Added scripts: Insert/Edit HTML Color, Validate.
+    *) Fixed SEE-969: wrong color for IDs
+
 Changes with Version 1.2 (SEE 2.3)
 
     *) SYMBOLS: Fixed SEE-490.
