--- a/subethaedit/Modes/HTML.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/HTML.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.3 (SEE 2.5)
+    *) Added scripts: Add Link, Comment Selection, Validate, Close Last Tag and Insert/Edit HTML Color
+    *) Fixed SEE-1018: HTML highlighting of javascript strings by deleting character state and expanding string state.
+
 Changes with Version 1.2 (SEE 2.3)
     
     *) Fixed SEE-490
