--- a/subethaedit/Modes/Javascript.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Javascript.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.3 (SEE 2.5)
+
+    *) added script: Insert/Edit HTML Color.
+
 Changes with Version 1.2 (SEE 2.3)
 
     *) Symbol recognition for lambda functions as used by e.g. prototype.js
