--- a/subethaedit/Modes/Python.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Python.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.3 (SEE 2.5)
+
+    *) added scripts: Insert Shebang, chmod ug+x, Check Syntax, Run in Terminal, Lookup at Python.net.
+
 Changes with Version 1.2 (SEE 2.3)
 
     *) SYMBOLS: Fixed SEE-490.
