--- a/subethaedit/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes with Version 2.5 (SEE 2.5)
+    *) added scripts: Insert Shebang, chmod ug+x, Check Syntax, Run in Terminal, Insert/Edit HTML Color.
+
 Changes with Version 2.4 (by dom - SEE 2.3)
     *) added more AutocompleteAdditions (standard XHTML, CSS)
     *) added comment mark recognition <!-- mark
