--- a/subethaedit/Modes/CSS.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/CSS.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.4 (SEE 2.5.1)
+
+    *) Substituted 501 with `id -g` to make all utf-8 "do shell script" commands work on non-501 users. (fixes SEE-1042)
+    
 Changes with Version 1.3 (SEE 2.5)
 
     *) Added scripts: Insert/Edit HTML Color, Validate.
