--- a/subethaedit/Modes/Java.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Java.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,9 @@
+Changes with Version 1.3 (SEE 2.5.1)
+
+    *) added un/comment lines 
+    *) Fixing SEE-1097 (Java function-parsing doesn't work with fully qualified classes in the return type)
+    *) fixed issue SEE-1040: "Check Syntax" script has same key shortcut as block edit by changing it to ctrl-command-b
+
 Changes with Version 1.2
     
     *) Added Scripts: Compile, Compile and Run in Terminal.
