--- a/subethaedit/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes with Version 1.6 (SEE 2.5.1)
+    *) Uncomment script had wrong icon.
+
 Changes with Version 1.5 (SEE 2.5)
 
     *) Added Scripts: NSLog with Function Call, Insert Call To Super, Open Counterpart, Open File In Project, Open Xcode Project, Compile Using Xcode, Un/Comment Selected Lines, Lookup in AppKiDo.
