--- a/subethaedit/Modes/Python.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Python.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,8 @@
+Changes with Version 1.4 (SEE 2.5.1)
+
+    *) Corrected precedence of states for built-in modes
+    *) fixed issue SEE-1040: "Check Syntax" script has same key shortcut as block edit by changing it to ctrl-command-b
+
 Changes with Version 1.3 (SEE 2.5)
 
     *) added scripts: Insert Shebang, chmod ug+x, Check Syntax, Run in Terminal, Lookup at Python.net.
