--- a/subethaedit/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes with Version 2.6 (SEE 2.5.1)
+    *) fixed issue SEE-1040: "Check Syntax" script has same key shortcut as block edit by changing it to ctrl-command-b
+
 Changes with Version 2.5 (SEE 2.5)
     *) added scripts: Insert Shebang, chmod ug+x, Check Syntax, Run in Terminal, Insert/Edit HTML Color.
 
